rectified the text input error validation

--- a/style.css
+++ b/style.css
@@ -78,8 +78,8 @@ h2 {
     visibility: hidden;
 }
 
-.form-control.error {
-    visibility: hidden;
+.form-control.error small{
+    visibility: visible;
 }
 
 .form button {
